# ai-literacy-quest

./: .env.example  .gitignore  .mcp.json  README.md  compose.yaml  dev.bat  dev.ps1  opencode.jsonc
.gemini/: settings.json  settings.json.bak
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.workbuddy/memory/: 2026-07-22.md  MEMORY.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260720_0001_create_demo_personas.py  20260720_0002_create_knowledge_space.py  20260720_0003_create_card_details_and_sources.py
apps/api/src/campus_ai/: __init__.py  main.py
apps/api/src/campus_ai/api/: router.py
apps/api/src/campus_ai/api/v1/: ai.py  health.py  vision.py
apps/api/src/campus_ai/core/: config.py
apps/api/src/campus_ai/db/: session.py
apps/api/src/campus_ai/modules/ai_companion/: __init__.py  schemas.py  service.py
apps/api/src/campus_ai/modules/vision/: __init__.py  schemas.py  service.py
apps/api/src/campus_ai/providers/: __init__.py  base.py  deepseek.py  factory.py  longcat.py  mock.py  service.py  structured.py  vision_base.py  vision_factory.py  vision_mock.py  vision_openai.py
apps/api/tests/: test_api.py  test_chat_model.py  test_vision.py
apps/mobile/: .env.example  .env.local.example  app.json  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  chat.tsx  knowledge-graph.tsx
output/: chat-feature-overview.md
output/expo-check/: metadata.json
output/expo-keyword-final/: metadata.json
output/expo-keyword-preview/: metadata.json
(+57 files in other folders)
